<resources>
    <string name="app_name">LoL Build Randomizer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_sheet_exit">Salir</string>
    <string name="bottom_sheet_title">¿Desea salir de la aplicación?</string>
    <string name="button_pressed_success">"Botón presionado: "</string>
    <string name="button_main_randomize">Randomizar</string>
    <string name="button_main_stop">Detener</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">¿Listo para una verdadera batalla?</string>
    <string name="setup_checkbox_randomize_runes">Randomizar runas</string>
    <string name="setup_description_title">Si yo gano la batalla…</string>
    <string name="setup_description_helper">Descripción/condiciones de la batalla</string>
    <string name="setup_title">Prepararción de batalla</string>
    <string name="setup_button_start">Iniciar batalla</string>
    <string name="setup_checkbox_randomize_items">Randomizar items</string>
    <string name="choose_mode_button_next">Siguiente</string>
    <string name="choose_mode_title">Elegir el modo de juego</string>
    <string name="choose_mode_button_1vs1">Batalla 1vs1</string>
    <string name="choose_mode_button_group">Juego grupal</string>
    <string name="choose_mode_button_back">Atrás</string>
    <string name="share_link_title">Antes de avanzar, crea la partida y pasa el código a algún amigo</string>
    <string name="share_link_code_example">Crea la partida…</string>
    <string name="setup_checkbox_incomplete_items">Incluir objetos incompletos</string>
    <string name="main_item_title">Tus items:</string>
    <string name="main_summoner_title">Tus hechizos:</string>
    <string name="setup_radio_aram_map">ARAM</string>
    <string name="setup_radio_classic_map">Grieta del Invocador</string>
    <string name="setup_radio_type_incomplete">Sólo items incompletos</string>
    <string name="setup_radio_type_complete">Sólo items completos</string>
    <string name="setup_radio_type_both">Items completos e incompletos</string>
    <string name="share_link_input_code_subtitle">…O pega el código que recibiste de tu amigo</string>
    <string name="share_link_input_code">Ingresa el código y presiona el botón de abajo</string>
    <string name="share_link_start_with_code">Ingresar con el código</string>
    <string name="main_summoner_opponent_title">Hechizos de %1$s</string>
    <string name="main_item_opponent_title">Items de %1$s</string>
    <string name="main_loading_opponent_title">Esperando al oponente…</string>
    <string name="share_link_create_game">Crear partida</string>
    <string name="share_link_waiting_opponent">Esperando al oponente…</string>
    <string name="create_or_join_title">Seleccione una opción</string>
    <string name="create_or_join_join_game">Ingresar a una partda</string>
    <string name="join_game_title">Pega el código que te haya pasado tu amigo</string>
    <string name="finish_game_title">¡Bien! Puedes sacar una foto y compartirla con tu amigo como muestra de que has ganado.</string>
    <string name="finish_game_take_picture">Tomar foto</string>
    <string name="finish_game_description_title">Recuerdo de tu descripción de ganador:</string>
    <string name="finish_game_share">Enviar por:</string>
    <string name="button_main_finish_game">He ganado!</string>
    <string name="main_are_you_sure_finish_game">¿Estás seguro de que deseas finalizar el juego?</string>
    <string name="main_alert_message1_finish_game">No podrás volver atrás</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="finish_game_send">Compartir</string>
    <string name="share_link_create_solo_game">Solo</string>
    <string name="privacy_policy">Política de privacidad</string>
    <string name="developed_by">FromMeToYou</string>
    <string name="privacy_policy_url">https://sites.google.com/view/frommetoyoudevelops/p%C3%A1gina-principal</string>
    <string name="empty_description">\"Sin descripción\"</string>
    <string name="main_item_opponent_title_waiting">Esperando al oponente...</string>
    <string name="contact_me">Si deseas enviar un mensaje o sugerencia: frommetoyoudevelops@gmail.com</string>
</resources>