<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".joingame.view.JoinGameFragment">
    <TextView
        android:id="@+id/tvInputCodeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/join_game_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/common_padding_large"
        android:layout_marginStart="@dimen/common_padding_default"
        android:layout_marginEnd="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilInputCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        android:hint="@string/share_link_input_code"
        android:transitionGroup="true"
        android:layout_marginTop="@dimen/common_padding_large"
        android:layout_marginStart="@dimen/common_padding_large"
        android:layout_marginEnd="@dimen/common_padding_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputCodeTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInputCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartWithCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_link_start_with_code"
        app:icon="@drawable/ic_baseline_navigate_next_24"
        app:iconGravity="end"
        android:enabled="false"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginBottom="@dimen/common_padding_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilInputCode"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_description_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_marginTop="@dimen/common_padding_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartWithCode"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setup_description_helper"
        app:endIconMode="clear_text"
        android:transitionGroup="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        android:layout_marginStart="@dimen/common_padding_large"
        android:layout_marginEnd="@dimen/common_padding_large"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginBottom="@dimen/common_padding_large"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWinDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="10"
            android:text=""/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/waitingForOpponentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_marginTop="@dimen/common_padding_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilDescription">
        <TextView
            android:id="@+id/tvWaitingForOppoennt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_link_waiting_opponent"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWaitingForOppoennt"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_mode_button_back"
        app:icon="@drawable/ic_baseline_arrow_back_ios_24"
        android:layout_marginBottom="@dimen/common_padding_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_mode_button_next"
        app:icon="@drawable/ic_baseline_navigate_next_24"
        app:iconGravity="end"
        android:enabled="false"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"/>

</androidx.constraintlayout.widget.ConstraintLayout>