<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setup.view.SetupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_marginTop="@dimen/common_padding_large"
            android:layout_marginBottom="@dimen/common_padding_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/containerRunes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/common_padding_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">
            <TextView
                android:id="@+id/tvRandomizeRunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_padding_large"
                android:text="@string/setup_checkbox_randomize_runes"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <CheckBox
                android:id="@+id/cbRandomizeRunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/containerItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/common_padding_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerRunes">
            <TextView
                android:id="@+id/tvRandomizeItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_checkbox_randomize_items"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_marginStart="@dimen/common_padding_large"/>
            <CheckBox
                android:id="@+id/cbRandomizeItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:checked="true"/>
        </LinearLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/common_padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerItems"
            app:layout_constraintBottom_toTopOf="@+id/btnBack">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/containerItemType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/common_padding_large"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <RadioGroup
                        android:id="@+id/radioItemTypeGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/rbIncomplete"
                            android:text="@string/setup_radio_type_incomplete"
                            android:layoutDirection="rtl"
                            android:layout_gravity="end"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:id="@+id/rbComplete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:layoutDirection="rtl"
                            android:layout_gravity="end"
                            android:text="@string/setup_radio_type_complete"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>
                        <RadioButton
                            android:id="@+id/rbBoth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:layoutDirection="rtl"
                            android:layout_gravity="end"
                            android:text="@string/setup_radio_type_both"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/containerMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/containerItemType">
                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/rbAram"
                            android:text="@string/setup_radio_aram_map"
                            android:layoutDirection="rtl"
                            android:layout_gravity="end"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:id="@+id/rbClassic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:layoutDirection="rtl"
                            android:layout_gravity="end"
                            android:text="@string/setup_radio_classic_map"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/winDescriptionContainer"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/common_padding_large"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/containerMap">
                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setup_description_title"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/setup_description_helper"
                        app:endIconMode="clear_text"
                        android:transitionGroup="true"
                        android:layout_marginStart="@dimen/common_padding_large"
                        android:layout_marginEnd="@dimen/common_padding_large"
                        android:layout_marginTop="@dimen/common_padding_default"
                        android:layout_marginBottom="@dimen/common_padding_large"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etWinDescription"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxLines="10"
                            android:text=""/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
      </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_button_start"
            app:layout_constraintTop_toTopOf="@+id/btnBack"
            app:layout_constraintStart_toEndOf="@+id/btnBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btnBack"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_mode_button_back"
            app:icon="@drawable/ic_baseline_arrow_back_ios_24"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginBottom="@dimen/common_padding_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnStart"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
