<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sharelink.ShareLinkFragment">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/share_link_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/common_padding_large"
        android:layout_marginStart="@dimen/common_padding_default"
        android:layout_marginEnd="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:id="@+id/copyCodeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/common_padding_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_link_code_example"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
        </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
            android:id="@+id/btnCopyCode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/common_padding_micro"
            android:src="@drawable/ic_baseline_content_copy_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@color/design_default_color_primary"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/waitingForOpponentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_marginTop="@dimen/common_padding_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyCodeContainer">
        <TextView
            android:id="@+id/tvWaitingForOppoennt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_link_waiting_opponent"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWaitingForOppoennt"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_link_create_game"
        app:icon="@drawable/ic_baseline_create_24"
        app:iconGravity="end"
        android:layout_marginBottom="@dimen/common_padding_large"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_mode_button_back"
        app:icon="@drawable/ic_baseline_arrow_back_ios_24"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_marginBottom="@dimen/common_padding_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCreateGame"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>